<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@color/yellow">

        <TextView
            android:id="@+id/txtMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNgonNgu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rdiGroupLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdiVie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/vie" />

                <RadioButton
                    android:id="@+id/rdiEng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng" />


            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/txtFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rdiGroupFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdiDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/def" />

                <RadioButton
                    android:id="@+id/rdiBread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:background="@color/green"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>