<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/category"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/category"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/content"
            android:textColor="#a9a9a9"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="right"
            android:text="@string/date"
            android:textColor="#a9a9a9"
            android:textSize="10sp"
            android:textStyle="italic" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLike"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/icon_heart_1" />
    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/icon_trash" />
</LinearLayout>